k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: atividade-kubernetes-svc
spec:
  type: NodePort
  ports:
    - port: 4000
      nodePort: 30000
  selector:
    app: atividade-kubernetes


---

apiVersion: v1
kind: Service
metadata:
  name: atividade-kubernetes-svc-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 4000
  selector:
    app: atividade-kubernetes-svc
