k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atividade-kubernetes-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: atividade-kubernetes.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atividade-kubernetes-svc
                port:
                  number: 4000
